deployment.yaml
# --- DEPLOYMENT SECTION ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: joshisk/todo-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        # 1. Links the virtual disk to a specific folder inside the container
        volumeMounts:
        - name: db-storage
          # 2. The exact location where your Django/Python app looks for the DB
          mountPath: /app/db.sqlite3
          # 3. Mounts only the file, preventing the whole /app folder from being overwritten
          subPath: db.sqlite3
      
      # 4. Defines the "Plug" that connects the container to the storage
      volumes:
      - name: db-storage
        # 5. Tells the Volume to get its space from the Claim defined below
        persistentVolumeClaim:
          claimName: todo-pvc
